gcc/testsuite/gdc.test/fail_compilation/fail4375j.d
// REQUIRED_ARGS: -w
// 4375: Dangling else

void main() {
    if (true)
        final switch (1)    // o_O
            case 1:
                if (false)
                    assert(119);
    else
        assert(120);
}

